improved title, nav, and header

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
-</head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Horiseon</title>
+    <meta
+      name="description"
+      content="A marketing company that specializes in Search Engine Optimization (SEO) 
+      allowing you to increase your visibility and find the right customers for your business."
+    />
+    <meta
+      name="keywords"
+      content="Online Reputation Management, SEO, search engine optimization, Social Media Marketing, Marketing Company"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 
-<body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+  <body>
+    <div class="body-style">
+      <!-- header nav section -->
+      <header>
+        <div class="header">
+          <h1>Hori<span class="seo">seo</span>n</h1>
+          <nav>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
+              <li>
+                <a href="#search-engine-optimization"
+                  >Search Engine Optimization</a
+                >
+              </li>
+              <li>
+                <a href="#online-reputation-management"
+                  >Online Reputation Management</a
+                >
+              </li>
+              <li>
+                <a href="#social-media-marketing">Social Media Marketing</a>
+              </li>
             </ul>
+          </nav>
         </div>
-    </div>
+      </header>
+      <!-- header nav section end -->
+      
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
