updated HTML and CSS to hero and what-we-do(content)

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -43,30 +43,58 @@
       </header>
       <!-- header nav section end -->
       
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
+      <!-- hero section -->
+      <section class="hero"></section>
+      <!-- hero section end -->
+
+      <!-- what-we-do section -->
+      <section class="what-we-do">
+        <div id="search-engine-optimization" class="what-we-do-section">
+          <img
+            src="./assets/images/search-engine-optimization.jpg"
+            class="float-left what-we-do-img"
+            alt="Search Engine Optimization notebook"
+          />
+          <h2>Search Engine Optimization</h2>
+          <p class="small-text">
+            The dominance of mobile internet use means that users are searching
+            for the right business as they travel, shop, or sit on their couch
+            at home. Search Engine Optimization (SEO) allows you to increase
+            your visibility and find the right customers for your business.
+          </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
+        <div id="online-reputation-management" class="what-we-do-section">
+          <img
+            src="./assets/images/online-reputation-management.jpg"
+            class="float-right what-we-do-img"
+            alt="Laptop displaying reputation graph"
+          />
+          <h2>Online Reputation Management</h2>
+          <p class="small-text">
+            The web is full of opinions, and some of these can be negative.
+            Social media allows anyone with an internet connection to say
+            whatever they want about your business. Online Reputation Management
+            gives you the control over what potential customers see when they
+            search for your business.
+          </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
+        <div id="social-media-marketing" class="what-we-do-section">
+          <img
+            src="./assets/images/social-media-marketing.jpg"
+            class="float-left what-we-do-img"
+            alt="Social Media marketing stickers on table"
+          />
+          <h2>Social Media Marketing</h2>
+          <p class="small-text">
+            Social media continues to have a sizable influence on buying habits.
+            Social media marketing helps you determine which platforms are
+            suited to your brand, using analytics to find the right markets and
+            increase your lead generation.
+          </p>
         </div>
-    </div>
+      </section>
+      <!-- what-we-do section end-->
+      
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
