updated HTML/CSS for benefits section

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -94,30 +94,48 @@
         </div>
       </section>
       <!-- what-we-do section end-->
+
+     <!-- benefits section -->
+      <section class="benefits">
+        <div class="benefit-details">
+          <h3 class="benefit-header">Lead Generation</h3>
+          <img
+            src="./assets/images/lead-generation.png"
+            class="benefit-img"
+            alt="funnel with money icon"
+          />
+          <p class="small-text">
+            Inbound strategies for lead generation require less work for your
+            business, bringing customers directly to your website.
+          </p>
+        </div>
+        <div class="benefit-details">
+          <h3 class="benefit-header">Brand Awareness</h3>
+          <img
+            src="./assets/images/brand-awareness.png"
+            class="benefit-img"
+            alt="person with light bulb head icon"
+          />
+          <p class="small-text">
+            Users find your business through paid and organic searches,
+            increasing the search ranking and visibility for your business.
+          </p>
+        </div>
+        <div class="benefit-details">
+          <h3 class="benefit-header">Cost Management</h3>
+          <img
+            src="./assets/images/cost-management.png"
+            class="benefit-img"
+            alt="coin with dollar sign icon"
+          />
+          <p class="small-text">
+            As the search ranking for your business increases, your advertising
+            costs decrease, and you no longer need to advertise your page.
+          </p>
+        </div>
+      </section>
+      <!-- benefits section end-->
       
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
