updated HTML/CSS for footer, added screenshot of website

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -42,7 +42,7 @@
         </div>
       </header>
       <!-- header nav section end -->
-      
+
       <!-- hero section -->
       <section class="hero"></section>
       <!-- hero section end -->
@@ -95,7 +95,7 @@
       </section>
       <!-- what-we-do section end-->
 
-     <!-- benefits section -->
+      <!-- benefits section -->
       <section class="benefits">
         <div class="benefit-details">
           <h3 class="benefit-header">Lead Generation</h3>
@@ -135,13 +135,15 @@
         </div>
       </section>
       <!-- benefits section end-->
-      
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
-</body>
 
+      <!-- footer section -->
+      <footer class="footer">
+        <h2>Made with ❤️️ by Horiseon</h2>
+        <p class="small-text">
+          &copy; 2019 Horiseon Social Solution Services, Inc.
+        </p>
+      </footer>
+      <!-- footer section end -->
+    </div>
+  </body>
 </html>
